fixed overflow and error position

--- a/TodoListTaskJs/wwwroot/css/styles.css
+++ b/TodoListTaskJs/wwwroot/css/styles.css
@@ -73,20 +73,6 @@ body {
         align-items: center;
     }
 
-.list-item-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.todo-item-text-edit {
-    border: 1px solid #ff8c00;
-    border-radius: 4px;
-    background-color: #4a4a4a;
-    color: #f5f5f5;
-    flex-grow: 1;
-    margin-right: 10px;
-}
-
 .button {
     margin-left: 5px;
     border: none;
@@ -97,6 +83,31 @@ body {
 .delete-button {
     background-color: #ff5722;
     color: #ffffff;
+}
+
+.buttons-container {
+    display: flex;
+}
+
+.todo-item-text {
+    width: 80%;
+    max-width: 80%;
+    overflow: auto;
+}
+
+.todo-item-text-edit {
+    border: 1px solid #ff8c00;
+    border-radius: 4px;
+    background-color: #4a4a4a;
+    color: #f5f5f5;
+    margin-right: 10px;
+}
+
+.list-item-input-container {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    max-width: 80%;
 }
 
 .error-message {
